# SurgeEnhancer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.yaml
.github/workflows/: build.yml  release.yml
src/: config.rs  main.rs  mihomo_api.rs  mihomo_manager.rs  model.rs  port.rs  state.rs
src/fetch/: fetcher.rs  scheduler.rs
src/generate/: mihomo.rs  mod.rs  surge.rs
src/parse/: base64.rs  clash.rs  detect.rs  mod.rs
src/server/: api.rs  dashboard.rs
src/templates/: dashboard.html
zig/: build.zig  build.zig.zon
zig/src/: config.zig  libyaml.zig  main.zig  mihomo_api.zig  mihomo_manager.zig  model.zig  pcre2.zig  port.zig  state.zig  test_config.zig
zig/src/fetch/: fetcher.zig  scheduler.zig
zig/src/generate/: mihomo.zig  surge.zig
zig/src/parse/: base64.zig  clash.zig  detect.zig
zig/src/server/: api.zig
